# edu-DirMonitor

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.71673a6  CMakeLists.txt.user.ffe53a3  README.md  app.cpp  app.h  app.ui  main.cpp
src/: dirmonitor.cpp  dirmonitor.h  logger.cpp  logger.h  server.cpp  server.h
test/: CMakeLists.txt  dirmonitor_test.h  tests.cpp
